[tool.poetry]
name = "python-injection-framework"
version = "0.0.2"
description = "Another Python Dependency injector framework."
authors = ["Zac Scott <zac.scott11@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{ include = "pif" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pre-commit = "^3.7.1"
coverage = "^7.5.3"
anybadge = "^1.14.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["B008"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
