[tool.poetry]
name = "python-injection-framework"
version = "0.0.2"
description = "Another Python Dependency injector framework."
authors = ["Zac Scott <zac.scott11@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{ include = "pif" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)4s] [%(name)9s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["B008"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
