[project]
name = "python-injection-framework"
version = "0.0.2"
description = "Another Python Dependency injector framework."
readme = "README.md"
requires-python = "<4.0,>=3.11"
authors = [
    { name = "Zac Scott", email = "zac.scott11@gmail.com" },
]
license = { text = "BSD-3" }
dependencies = []

[dependency-groups]
dev = [
    "anybadge>=1.16.0",
    "coverage>=7.6.12",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = "src"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)4s] [%(name)9s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["B008"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
